--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "react-app/jest"
     ]
   },
-  "homepage": "http://AakrritiJain.github.io/marvel",
+  "homepage": "http://AakrritiJain.github.io/marvel/",
   "browserslist": {
     "production": [
       ">0.2%",
